[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/room.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/circuit.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://assets/monogram.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sounds/bug_song.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/collect_sound.wav" type="AudioStream" id=6]

[sub_resource type="Curve" id=8]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 35 ), 0.0, 0.0, 0, 0, Vector2( 0.330233, -200 ), 0.0, 0.0, 0, 0, Vector2( 0.660465, 200 ), 0.0, 0.0, 0, 0, Vector2( 1, -77.7273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.00520833, 0.4375, 0.817708, 1 )
colors = PoolColorArray( 0, 0.818359, 1, 1, 1, 0.510758, 0.434555, 1, 0.80957, 0, 0.479101, 1, 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.278431, 0.803922, 0.760784, 1 )
border_width_right = 4
border_color = Color( 0.282353, 0.580392, 0.592157, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.117647, 0.34902, 0.329412, 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "win"
length = 1.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HBox/SecondScreen/WinScreen/WinLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 0.450625, 2.37841 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 602.0 ]
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VC" type="ViewportContainer" parent="HBox"]
margin_right = 1276.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HBox/VC"]
size = Vector2( 1276, 720 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CircuitMap" parent="HBox/VC/Viewport" instance=ExtResource( 2 )]

[node name="SecondScreen" type="Control" parent="HBox"]
margin_left = 1280.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="VC2" type="ViewportContainer" parent="HBox/SecondScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HBox/SecondScreen/VC2"]
size = Vector2( 0, 720 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Room" parent="HBox/SecondScreen/VC2/Viewport" instance=ExtResource( 1 )]
__meta__ = {
"_edit_horizontal_guides_": [ 480.0, 96.0 ],
"_edit_vertical_guides_": [ 630.0, 91.0 ]
}

[node name="Confetti" type="CPUParticles2D" parent="HBox/SecondScreen/VC2/Viewport"]
emitting = false
amount = 1200
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 600, 1 )
angular_velocity = 75.13
angular_velocity_random = 0.63
tangential_accel = 15.0
tangential_accel_random = 1.0
tangential_accel_curve = SubResource( 8 )
scale_amount = 10.0
color_ramp = SubResource( 7 )
hue_variation = 0.44
hue_variation_random = 0.37

[node name="DustPB" type="ProgressBar" parent="HBox/SecondScreen"]
anchor_left = 0.04
anchor_right = 0.96
margin_top = 22.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 0.1

[node name="WinScreen" type="Control" parent="HBox/SecondScreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WinLabel" type="Label" parent="HBox/SecondScreen/WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -19.0
margin_right = 198.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 187.088, 23.5824 )
custom_fonts/font = SubResource( 4 )
text = "Thank You For Playing!"
align = 1

[node name="WinLabel2" type="Label" parent="HBox/SecondScreen/WinScreen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -276.0
margin_top = -55.0
custom_fonts/font = SubResource( 5 )
text = "made by Akulove Aleksey
for GameDEVils JAM 2023"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/win = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -23.362
pitch_scale = 0.85
autoplay = true

[node name="CollectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 10.0
